@@ -13,6 +13,7 @@
      data-url-lizard-map-snippet-add="{% url lizard_map_session_collage_snippet_add %}"
      data-url-lizard-map-snippet-delete="{% url lizard_map_session_collage_snippet_delete %}"
      data-url-lizard-map-session-workspace-add-item-temp="{% url lizard_map_session_workspace_add_item_temp %}"
+     data-url-lizard-map-workspace-extent-temp="{% url lizard_map_session_workspace_extent_temp %}"
      data-url-lizard-map-collage-popup="{% url lizard_map.collage_popup %}"
      data-url-lizard-map-snippet-popup="{% url lizard_map.snippet_popup %}"
      data-url-lizard-map-search-coordinates="{% url lizard_map.search_coordinates %}"
