@@ -158,14 +158,6 @@ def workspace_item_edit(request, workspace_item_id=None, visible=None):
 
 
 @never_cache
-def workspace_extent(request, workspace_id=None):
-    """Returns extent for the workspace in json.
-    """
-    workspace = get_object_or_404(Workspace, pk=workspace_id)
-    return HttpResponse(json.dumps(workspace.extent()))
-
-
-@never_cache
 def snippet_group_graph_edit(request, snippet_group_id):
     """Edits snippet_group properties using post.
     """
@@ -309,6 +301,15 @@ def session_workspace_edit_item(request,
 
     #todo: maak functie af
     return
+
+
+@never_cache
+def session_workspace_extent(request, workspace_category='user'):
+    """Returns extent for the workspace in json.
+    """
+    workspace_id = request.session['workspaces'][workspace_category][0]
+    workspace = get_object_or_404(Workspace, pk=workspace_id)
+    return HttpResponse(json.dumps(workspace.extent()))
 
 
 def popup_json(found, popup_id=None, hide_add_snippet=False, request=None):
